--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.98.0",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.468.0",
     "next": "^16.1.6",
     "react": "^18.3.1",
